<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_client_edit_ad"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ad.adeverywhere.ui.client.ClientEditAdActivity"
    android:orientation="vertical"
    android:background="@color/colorLightBackgroud">

<TableLayout android:background="@color/colorMainStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp">

    <TableRow
        android:paddingTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView style="@style/text_for_client_ad"
            android:text="@string/client_ad_description" />

        <EditText style="@style/text_for_client_ad"
            android:id="@+id/tx_description"
            android:layout_weight="1" />

    </TableRow>
    <TableRow><View style="@style/separator_for_text" android:layout_span="2" android:layout_weight="1"/></TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView style="@style/text_for_client_ad"
            android:text="@string/client_ad_cars" />

        <EditText style="@style/text_for_client_ad"
            android:id="@+id/tx_cars"
            android:hint="@string/client_ad_cars_hint"
            android:layout_weight="1" />
    </TableRow>
    <TableRow><View style="@style/separator_for_text" android:layout_span="2" android:layout_weight="1"/></TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView style="@style/text_for_client_ad"
            android:text="@string/client_ad_car_type" />

        <EditText style="@style/text_for_client_ad"
            android:id="@+id/tx_car_type"
            android:hint="@string/client_ad_car_type_hint"
            android:layout_weight="1" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/arrows_right"
            android:id="@+id/btSelCarType"
            android:background="@android:color/transparent" />
    </TableRow>
    <TableRow><View style="@style/separator_for_text" android:layout_span="2" android:layout_weight="1"/></TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView style="@style/text_for_client_ad"
            android:text="@string/client_ad_car_company" />

        <EditText style="@style/text_for_client_ad"
            android:id="@+id/tx_car_company"
            android:hint="@string/client_ad_car_company_hint"
            android:layout_weight="1" />
    </TableRow>
    <TableRow><View style="@style/separator_for_text" android:layout_span="2" android:layout_weight="1"/></TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView style="@style/text_for_client_ad"
            android:text="@string/client_ad_start_date" />

        <EditText style="@style/text_for_client_ad"
            android:id="@+id/tx_start_date"
            android:hint="@string/client_ad_start_date_hint"
            android:layout_weight="1" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/arrows_right"
            android:id="@+id/btSelStartDate"
            android:background="@android:color/transparent" />
    </TableRow>
    <TableRow><View style="@style/separator_for_text" android:layout_span="2" android:layout_weight="1"/></TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView style="@style/text_for_client_ad"
            android:text="@string/client_ad_period" />

        <EditText style="@style/text_for_client_ad"
            android:id="@+id/tx_period"
            android:hint="@string/client_ad_period_hint"
            android:layout_weight="1" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/arrows_right"
            android:id="@+id/btSelPeriod"
            android:background="@android:color/transparent" />
    </TableRow>
    <TableRow><View style="@style/separator_for_text" android:layout_span="2" android:layout_weight="1"/></TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button style="@style/main_action_button"
            android:text="@string/common_save"
            android:id="@+id/bt_request_contact"
            android:layout_span="2"
            android:layout_weight="1.0"/>
    </TableRow>
</TableLayout>
</LinearLayout>
