<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about_us"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ad.adeverywhere.ui.common.AboutUsActivity">


    <TableLayout android:background="@color/colorMainStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

    <TableRow
        android:paddingTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView style="@style/me_icon"
            app:srcCompat="@drawable/about_web" />

        <TextView style="@style/text_for_client_ad"
            android:text="@string/aboutus_site" />

        <TextView style="@style/text_for_client_ad"
            android:text="@string/aboutus_site_content"
            android:layout_weight="1" />

    </TableRow>
    <TableRow><View style="@style/separator_for_text" android:layout_span="2" android:layout_weight="1"/></TableRow>
        <TableRow
            android:paddingTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView style="@style/me_icon"
                app:srcCompat="@drawable/about_wechat" />

            <TextView style="@style/text_for_client_ad"
                android:text="@string/aboutus_wechat" />

            <TextView style="@style/text_for_client_ad"
                android:text="@string/aboutus_wechat_content"
                android:layout_weight="1" />

        </TableRow>
        <TableRow><View style="@style/separator_for_text" android:layout_span="2" android:layout_weight="1"/></TableRow>
        <TableRow
            android:paddingTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView style="@style/me_icon"
                app:srcCompat="@drawable/about_phone" />

            <TextView style="@style/text_for_client_ad"
                android:text="@string/aboutus_phone" />

            <TextView style="@style/text_for_client_ad"
                android:text="@string/aboutus_phone_content"
                android:layout_weight="1" />

        </TableRow>
        <TableRow><View style="@style/separator_for_text" android:layout_span="2" android:layout_weight="1"/></TableRow>
        <TableRow
            android:paddingTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView style="@style/me_icon"
                app:srcCompat="@drawable/about_address" />

            <TextView style="@style/text_for_client_ad"
                android:text="@string/aboutus_address" />

            <TextView style="@style/text_for_client_ad"
                android:text="@string/aboutus_address_content"
                android:layout_weight="1" />

        </TableRow>
        <TableRow><View style="@style/separator_for_text" android:layout_span="2" android:layout_weight="1"/></TableRow>
</TableLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:text="@string/legal_chinese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" />
        <TextView
            android:text="@string/legal_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" />
    </LinearLayout>
</RelativeLayout>
