<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_driver_edit_car"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorLightBackgroud"
    tools:context="com.ad.adeverywhere.ui.driver.DriverEditCarActivity">

    <TableLayout
        android:background="@color/colorMainStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutTable"
        android:paddingTop="10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView style="@style/text_for_me"
                android:text="@string/car_plate" />

            <EditText style="@style/text_for_me"
                android:id="@+id/txPlate"
                android:hint="@string/car_plate_hint"
                android:layout_weight="1"
                android:gravity="left|center_vertical"/>
        </TableRow>
        <TableRow><View style="@style/separator_for_text" android:layout_span="2" android:layout_weight="1"/></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView style="@style/text_for_me"
                android:text="@string/car_brand" />

            <EditText style="@style/text_for_me"
                android:id="@+id/txBrand"
                android:hint="@string/car_brand_hint"
                android:layout_weight="1"
                android:gravity="left|center_vertical"/>
        </TableRow>
        <TableRow><View style="@style/separator_for_text" android:layout_span="2" android:layout_weight="1"/></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView style="@style/text_for_me"
                android:text="@string/car_model" />

            <EditText style="@style/text_for_me"
                android:id="@+id/txModel"
                android:hint="@string/car_model_hint"
                android:layout_weight="1"
                android:gravity="left|center_vertical"/>
        </TableRow>
        <TableRow><View style="@style/separator_for_text" android:layout_span="2" android:layout_weight="1"/></TableRow>
    </TableLayout>
    <Button style="@style/main_action_button"
        android:text="@string/common_save"
        android:id="@+id/btSubmit"
        android:layout_below="@+id/layoutTable" />
</RelativeLayout>
